# magician-lod

./: .gitignore  README.md  pyproject.toml
magician/: __init__.py
magician/helpers/: __init__.py  grapher.py  object_parser.py  sourcer.py  templater.py  urifier.py
